# transformers-from-scratch

./: .gitignore  CONTRIBUTING.md  COURSE_OVERVIEW.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements.txt
assets/: README.md
data/: README.md
data/tiny/: README.md  tiny_sentiment.csv  tiny_translation_en_fr.csv
docs/: 01_what_is_attention.md  02_transformer_math.md  03_encoder_decoder.md  04_transformers_for_vision.md  05_segmentation.md  06_detection.md  07_detr_explained.md  glossary.md
notebooks/: 00_course_setup.ipynb  01_attention_intuition.ipynb  02_scaled_dot_product_attention.ipynb  03_multi_head_attention.ipynb  04_positional_encoding.ipynb  05_transformer_encoder_block.ipynb  06_text_classification_transformer.ipynb  07_encoder_decoder_translation.ipynb  08_time_series_transformer.ipynb  09_cnn_baseline_for_images.ipynb  10_vision_transformer_classification.ipynb  11_unet_semantic_segmentation.ipynb  12_vit_semantic_segmentation.ipynb  13_detection_basics_single_object.ipynb  14_detection_multi_object_grid_detector.ipynb  15_tiny_detr_object_detection.ipynb  16_final_project_model_comparison.ipynb
runs/: README.md  SUMMARY.md
runs/setup/: device_info.csv  (+1 more)
scripts/: run_text_classification.py  run_timeseries.py  run_tiny_detector.py  run_tiny_detr.py  run_translation.py  run_unet_segmentation.py  run_vit_classification.py  run_vit_segmentation.py
src/: __init__.py  config.py
tests/: test_attention_shapes.py  test_detection_shapes.py  test_positional_encoding.py  test_unet_shapes.py  test_vit_shapes.py
(+73 files in other folders)
