[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "transformers-from-scratch"
version = "1.0.0"
description = "An educational course teaching Transformers from scratch using PyTorch."
authors = [{ name = "Arash Sajjadi" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "scikit-learn",
    "Pillow",
    "jupyter",
    "ipywidgets",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
